# 1TAP-APP

./: .gitignore  .gitmodules  README.md  package.json  pyproject.toml
one_tap_v1/: api.py  api1.py  api2.py  api3.py  api4.py  api5.py  api6.py  demo_api_flows.py  events.py  for_server_script.py  hook_functions.py  hooks.py  im_api.py  modules.txt  package.json  preprocessed_data.pkl  test_api.py  testing.py  testing_apis_flow.py  tfidf_vectors.pkl
one_tap_v1/archived/: NLP_search.py  activity_search.py  api1.py  api10.py  api11 Backup.py  api11.py  api2.py  api3.py  api4.py  api_orig_old.py  api_test.py  data.xlsx  for_server_script Backup.py  for_server_script_copy.py  otp.py  otp_helper_old.py  otp_test_09.py  otp_verification.py  search_function.py  search_function_experimental.py  search_function_new.py  test_1.py  test_otp.py  ~$data.xlsx
one_tap_v1/helper/: backup.py  customer.py  customer_details.py  doctype.py  issue.py  item.py  item_price.py  metadata.py  otp_helper.py  project.py  sales_invoice.py  sales_order.py  task.py  user.py  user_customer.py  utility.py
one_tap_v1/helper/activity/: NLP_search_new.py  activity.py  search_function_experimental_adv.py
one_tap_v1/public/: swagger.json
one_tap_v1/public/css/: custom.css
one_tap_v1/scripts/: generate_items_20_may.py  generate_items_new copy.py  generate_items_new.py  update_script.py
one_tap_v1/www/: 1tap-test.html  auth.html  auth.py  home.html  swagger_ui.html  techhelpdesk.html  techhelpdesk.py
service/: package.json  vite.config.ts
service/src/: App.tsx
(+182 files in other folders)
